spacing fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import url(https://fonts.adobe.com/fonts/inter-variable);
 @import "tailwindcss";
 
+:root {
+  color-scheme: light !important;
+}
+
 @theme {
   --breakpoint-*: initial;
   --breakpoint-sm: ;
@@ -53,10 +57,61 @@
   --spacing-9: 3.6rem;
   --spacing-10: 4rem;
 }
-@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
-[data-theme="dark"] {
-  /* Do nothing */
+@media (prefers-color-scheme: dark) {
+  @theme {
+    --breakpoint-*: initial;
+    --breakpoint-sm: ;
+    --breakpoint-md: 640px;
+    --breakpoint-lg: 770px;
+    --breakpoint-xl: 1200px;
+    --breakpoint-2xl: 1500px;
+    /* Fonts */
+    --font-family-inter: "Inter Variable" "SF Pro Display", -apple-system,
+      BlinkMacSystem;
+
+    --text-*: initial;
+    --text-2xl: 3.2rem;
+    --text-xl: 2.5rem;
+    --text-md: 1.313rem;
+    --text-normal: 1.2rem;
+    --text-sm: 0.938rem;
+    --text-xs: 0.875rem;
+
+    --color-*: initial;
+    --color-background: #08090a;
+    --color-button: rgb(230, 230, 230);
+    --color-button-background: rgb(40, 40, 44);
+    --color-bg-translucent: hsla(0, 0%, 100%, 0.05);
+    /* Text Colors */
+    --color-text-green: rgb(104, 204, 88);
+    --color-text-orange: rgb(242, 153, 74);
+    --color-text-red: rgb(197, 40, 40);
+    --color-text-white: #fff;
+    --color-text-teritary: rgb(208, 214, 224);
+    --color-text-primary: rgb(247, 248, 248); /* white */
+    --color-text-subtitle: rgba(255, 255, 255, 0.7);
+    --color-text-secondary: rgb(138, 143, 152); /* greyish */
+    --color-text-black: rgb(8, 9, 10); /* black */
+    --color-text-decoration: rgb(138, 143, 152);
+    --color-border: rgb(35, 37, 42);
+    --color-container-background: "#141516";
+    --color-bg-translucent: hsla(0, 0%, 100%, 0.05);
+
+    --color-bg-quinary: #282828;
+    --spacing-0: 0;
+    --spacing-1: 0.4rem;
+    --spacing-2: 0.8rem;
+    --spacing-3: 1.2rem;
+    --spacing-4: 1.6rem;
+    --spacing-5: 2rem;
+    --spacing-6: 2.4rem;
+    --spacing-7: 2.8rem;
+    --spacing-8: 3.2rem;
+    --spacing-9: 3.6rem;
+    --spacing-10: 4rem;
+  }
 }
+
 @layer components {
   h1 {
     @apply text-[2.5rem] leading-[3rem] md:text-[3.2rem] md:leading-[3.75rem]  tracking-tighter text-[var(--color-text-primary)]  font-medium;
@@ -99,8 +154,8 @@
 /* apply font in whole app */
 body {
   font-family: var(--font-family-inter);
-  background-color: var(--color-background);
-  color: var(--color-text-primary);
+  background-color: var(--color-background) !important;
+  color: var(--color-text-primary) !important;
 }
 
 .hide-scroll-bar {
